examples/pos/issue1283a.effekt
def main(): Unit = {
  val boxed = 1 match {
    case 2 => box { () }
    case _ => box { println("message") }
  }
}
