examples/neg/must_box_block_param_nullary.effekt
module must_box_block_param_nullary

def foo { block: () => Unit } = block